--- a/resources.html
+++ b/resources.html
@@ -71,55 +71,52 @@
 
 
     <section class="contactContainer">
-          <!-- <div class="container"> -->
-            <div class="contactFooterContainer flexColumn">
-              <div class="formContainer">
-                <form class="info-left" action="./php/contact2.php" enctype="multipart/form-data" method="POST">
+                <div class="contactFooterContainer flexColumn">
+                  <div class="formContainer">
+                    <form class="info-left" action="./php/contact2.php" enctype="multipart/form-data" method="POST">
 
-                                  <input type="hidden" name="sendtoemail" value="info@healthcarebaltimore.com">
-                                  <input type='hidden' name='cgiemail-mailopt' value='sync' />
-                                  
-                                  <input type="hidden" name="subject" value="HealthcareBaltimore.com - Contact Form" />
-                                  <input type="hidden" name="redirect" value="http://www.healthcarebaltimore.com" />
+                      <input type="hidden" name="sendtoemail" value="info@healthcarebaltimore.com">
+                      <input type='hidden' name='cgiemail-mailopt' value='sync' />
+                      
+                      <input type="hidden" name="subject" value="HealthcareBaltimore.com - Contact Form" />
+                      <input type="hidden" name="redirect" value="http://www.healthcarebaltimore.com" />
 
-                  <div class="form-group">
-                    <div class="grouping">
-                      <label><i class="fas fa-user"></i> </label>
-                      <input id="contactName" class="form-control" type="text" name="" value="" placeholder="Enter Name">
-                    </div>
-                    <div class="grouping">
-                      <label><i class="fas fa-phone"></i> </label>
-                      <input id="contactPhone" class="form-control" type="text" name="" value="" placeholder="Phone Number">
-                    </div>
+                      <div class="form-group">
+                        <div class="grouping">
+                          <label><i class="fas fa-user"></i> </label>
+                          <input id="contactName" class="form-control" type="text" name="name" value="" placeholder="Enter Name">
+                        </div>
+                        <div class="grouping">
+                          <label><i class="fas fa-phone"></i> </label>
+                          <input id="contactPhone" class="form-control" type="text" name="phone" value="" placeholder="Phone Number">
+                        </div>
+                      </div>
+
+                      <div class="form-group">
+                        <div class="width100">
+                          <label><i class="far fa-envelope"></i> </label>
+                          <input id="contactEmail" class="form-control" type="text" name="email" value="" placeholder="Enter Email">
+                        </div>
+                      </div>
+
+                      <div class="form-group">
+                        <div class="width100">
+                          <label for="message"> <i class="far fa-comment"></i></label>
+                          <textarea id="contactMessage" class="form-control" name="message" value="" placeholder="Enter Message"></textarea>
+                        </div>
+                      </div>
+                      <button class="btn btn-submit">Submit</button>
+                    </form>
                   </div>
-
-                  <div class="form-group">
-                    <div class="width100">
-                      <label><i class="far fa-envelope"></i> </label>
-                      <input id="contactEmail" class="form-control" type="text" name="" value="" placeholder="Enter Email">
-                    </div>
+                  <div class="contactInfo info-right">
+                    <h3 id="h3Contact">Contact Info</h3>
+                    <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-699-8593</p>
+                    <p class="eachContactInfo"><i class="far fa-envelope"></i> info@healthcarebaltimore.com</p>
+                    <p class="eachContactInfo"><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
+                    <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
                   </div>
-
-                  <div class="form-group">
-                    <div class="width100">
-                      <!-- <label>Message: </label> -->
-                      <label for="message"> <i class="far fa-comment"></i></label>
-                      <textarea id="contactMessage" class="form-control" name="" value="" placeholder="Enter Message"></textarea>
-                    </div>
-                  </div>
-                  <button class="btn btn-submit">Submit</button>
-                </form>
-              </div>
-              <div class="contactInfo info-right">
-                <h3 id="h3Contact">Contact Info</h3>
-                <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-699-8593</p>
-                <p class="eachContactInfo"><i class="far fa-envelope"></i> info@healthcarebaltimore.com</p>
-                <p class="eachContactInfo"><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
-                <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
-              </div>
-            </div>
-            <!-- </div> -->
-          </section>
+                </div>
+              </section>
 
     <footer id="footer">
       <p id="copyrightText">Healthcare Baltimore Copyright &copy; 2018</p>
