added responsive design to thank you page.

--- a/thankyou.html
+++ b/thankyou.html
@@ -15,10 +15,12 @@
 		<h1 id="brand">Healthcare Baltimore</h1>
 	</div>
 	<div class="container">
-		<h1>Thank you for contacting us!!</h1>
-		<p>Your message was sent successfully.  One of our agent will contact you within 24 hours</p>
-
-		<button class="btn-primary"><a id="homeBtn" href="index.html" role="button">Home</a></button>
+		<div class="mainContent">
+			<h1>Thank you for contacting us!!</h1>
+			<p>Your message was sent successfully. <br>One of our agent will contact you within 24 hours.</p>
+			<button class="btn-primary"><a id="homeBtn" href="index.html" role="button">Home</a></button>
+		</div>
+		
 	</div>
 </body>
 </html>
