added photos to the topparagraphs on Medicare pages, life insurance and group insurance pages.

--- a/medicareAdvantagePartC.html
+++ b/medicareAdvantagePartC.html
@@ -51,6 +51,7 @@
     <div class="row">
           <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
+              <img class="photoTop2" src="./img/happySeniors.jpg" alt="">
               <h2>Medicare Advantage (Also known as Part C)</h2>
               
               <p>Medicare Advantage plans “MA” (aka “Part C”) are Medicare-approved private insurance plans that enable you to choose an HMO or PPO Health insurance plan. These plans typically are simple, all-inclusive plans that include and provide all the benefits of Medicare A, B, and usually D, as well as preventive health care benefits.</p>
