--- a/medicareSupplementPlan.html
+++ b/medicareSupplementPlan.html
@@ -51,8 +51,10 @@
     <div class="row">
           <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
+              <img class="photoTop" src="./img/85.jpeg" alt="">
               <h2>Medicare Supplement Plans</h2>
               <h3 class="text-capitalize">medicare supplement insurance (Medi-Gap)</h3>
+
               <p>Medi-Gap is supplemental insurance to cover some of the “gaps” that Original Medicare (Medicare Parts A and B) does not cover. Medicare out-of-pocket costs can include deductibles, copayments, and coinsurance.
               Medi-Gap policies are standardized by the federal government, and sold by private insurance companies. The benefits offered in every Medi-Gap policy are standardized by the Federal Government, and can be easily compared between carriers.</p>
             </div>
