--- a/lifeInsurance.html
+++ b/lifeInsurance.html
@@ -50,8 +50,9 @@
       <div class="row">
           <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
+               <img class="photoTop2" src="./img/happyFamily.jpg" alt="">
               <h2>Life Insurance</h2>
-              <h3 class="text-capitalize">Welcome to the life insurance area of our Web Site. This section covers the basics of life insurance. </h3>
+              <h3 class="text-capitalize h3smaller">Welcome to the life insurance area of our Web Site. This section covers the basics of life insurance. </h3>
               <p>Today, there is a wide variety of life insurance available, the most basic of which are term and permanent. Within each of these categories, however, there are many different types to choose from – and being familiar with these can help you better customize the coverage to meet your specific needs.</p>
 
               <h3 class="text-capitalize">10 Different Types of Life Insurance Policies on the Market Today</h3>
