added a photo on individual insurance page.

--- a/groupHealthInsurance.html
+++ b/groupHealthInsurance.html
@@ -52,7 +52,7 @@
           <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
 
-              <img class="photoTop2" src="./img/adultsHappy.jpg" alt="">
+              <img class="photoTop" src="./img/adultsHappy.jpg" alt="">
               <h2>Group Health Insurance</h2>
               
               <p>We provide insurance to members of a formal group such as employees of a firm or members of an association. Group insurance is distinguished from individual insurance in which single policies are sold to one person at a time and from social insurance (e.g., unemployment insurance, social security), which is sponsored by the government.
