added photos to the top of each page.

--- a/medicareSupplementPlan.html
+++ b/medicareSupplementPlan.html
@@ -51,7 +51,7 @@
     <div class="row">
           <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
-              <img class="photoTop" src="./img/85.jpeg" alt="">
+              <img class="photoTop" src="./img/retirement-planning.jpg" alt="">
               <h2>Medicare Supplement Plans</h2>
               <h3 class="text-capitalize">medicare supplement insurance (Medi-Gap)</h3>
 
