--- a/seminars.html
+++ b/seminars.html
@@ -51,6 +51,7 @@
     <div class="row">
           <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
+              <img class="photoTop" src="./img/seminars2.png" alt="people in seminar">
               <h2>Seminars</h2>
               <h3 class="text-capitalize">Important resource updates for seniors</h3>
               <h4>Site managers of assisted living facilities and community senior centers</h4>
