--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,9 @@
         
           <div class="mainContent">
             <div class="showcase-one">
+
               <h2 id="contactUs">Contact Us</h2>
+              <img class="photoTop" src="./img/contact-us.png" alt="">
               <div class="formContainer2">
               <form id="contactPageForm" action="./php/contact2.php" enctype="multipart/form-data" method="POST">
                 
