added responsive design to new photos added to each page.

--- a/resources.html
+++ b/resources.html
@@ -50,10 +50,10 @@
   <div class="container" id="contentContainer">
     <div class="row">
           <div class="col-md-12 col-sm-12 mainContent">
-            <div class="showcase-resources">
+            <div class="showcase-one">
               
               <h2>Resources</h2>
-                <img class="photoTop" src="./img/resources2.jpg" alt="">
+                <img class="photoTopResources" src="./img/resources2.jpg" alt="">
               <div class="resourcesLinks">
                 
                 <h3><a class="resourcesLink" href="http://nebula.wsimg.com/6386972fa5bcae57f582f38199cf0814?AccessKeyId=01AAB2E2B483BD965595&disposition=0&alloworigin=1">> SPDAP Application</a></h3>
