removed one ! on thankyou page.

--- a/thankyou.html
+++ b/thankyou.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="container">
 		<div class="mainContent">
-			<h1>Thank you for contacting us!!</h1>
+			<h1>Thank you for contacting us!</h1>
 			<p>Your message was sent successfully. <br>One of our agent will contact you within 24 hours.</p>
 			<button class="btn-primary"><a id="homeBtn" href="index.html" role="button">Home</a></button>
 		</div>
