--- a/seminars.html
+++ b/seminars.html
@@ -109,14 +109,14 @@
                         </div>
                         <div class="grouping">
                           <label><i class="fas fa-phone"></i> </label>
-                          <input id="contactPhone" class="form-control" type="text" name="phone" value="" placeholder="Phone Number">
+                          <input id="contactPhone" class="form-control" type="tel" name="phone" value="" placeholder="Phone Number">
                         </div>
                       </div>
 
                       <div class="form-group">
                         <div class="width100">
                           <label><i class="far fa-envelope"></i> </label>
-                          <input id="contactEmail" class="form-control" type="text" name="email" value="" placeholder="Enter Email">
+                          <input id="contactEmail" class="form-control" type="email" name="email" value="" placeholder="Enter Email">
                         </div>
                       </div>
 
