added videos to medicare and healthcare sections on the home page.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
           <div class="row" id="showcase-left-container">
             <div class="col-30 upper" >
               <div class="showcase-left imgContainer" >
-                <a href="medicareSupplementPlan.html"><img class="imgMDPlans2" src="./img/85.jpeg"></a>
+                <!-- <a href="medicareSupplementPlan.html"><img class="imgMDPlans2" src="./img/85.jpeg"></a> -->
+                <video class="video1" src="./vid/Medicare.mp4" controls poster="./img/medicarePoster.png"></video>
               </div>
             </div>
             <div class="col-70 lower">
@@ -166,7 +167,8 @@
 
               <div class="col-30 upper" >
                 <div class="showcase-left imgContainer" >
-                  <img class="imgMDPlans2" src="./img/adultsHappy.jpg">
+                  <!-- <img class="imgMDPlans2" src="./img/adultsHappy.jpg"> -->
+                  <video class="video2" src="./vid/Healthcare.mp4" controls poster="./img/healthcarePoster.png"></video>
                 </div>
               </div>
             </div>
