added alt value to photos.

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <div class="showcase-one">
 
               <h2 id="contactUs">Contact Us</h2>
-              <img class="photoTop" src="./img/contact-us.png" alt="">
+              <img class="photoTop" src="./img/contact-us.png" alt="Contact Us">
               <div class="formContainer2">
               <form id="contactPageForm" action="./php/contact2.php" enctype="multipart/form-data" method="POST">
                 
