--- a/individualHealthInsurance.html
+++ b/individualHealthInsurance.html
@@ -52,7 +52,7 @@
     <div class="row">
           <div class="mainContent">
             <div class="showcase-one">
-              <img class="photoTop" src="./img/individual3.jpg" alt="">
+              <img class="photoTop" src="./img/individual3.jpg" alt="Individual Health Insurance">
               <h2>Individual Health Insurance</h2>
               
               <p>Simply put, health insurance is protection against medical costs. A health insurance policy is a contract between an insurer and an individual or group, in which the insurer agrees to provide specified health insurance at an agreed-upon price (the premium). Depending on your policy, your premium may be payable either in a lump sum or in installments. Health insurance usually provides either direct payment or reimbursement for expenses associated with illnesses and injuries. The cost and range of protection provided by your health insurance will depend on your insurance provider and the particular policy you purchase. If your employer does not offer a health insurance plan, or if they offer it at a very high premium, you may wish to purchase health insurance on your own.
