--- a/medicareAdvantagePartC.html
+++ b/medicareAdvantagePartC.html
@@ -51,7 +51,7 @@
     <div class="row">
           <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
-              <img class="photoTop" src="./img/HappySeniors2.jpg" alt="">
+              <img class="photoTop" src="./img/HappySeniors2.jpg" alt="Medicare Advantage">
               <h2>Medicare Advantage<br>(Also known as Part C)</h2>
               
               <p>Medicare Advantage plans “MA” (aka “Part C”) are Medicare-approved private insurance plans that enable you to choose an HMO or PPO Health insurance plan. These plans typically are simple, all-inclusive plans that include and provide all the benefits of Medicare A, B, and usually D, as well as preventive health care benefits.</p>
