--- a/resources.html
+++ b/resources.html
@@ -53,7 +53,7 @@
             <div class="showcase-one">
               
               <h2>Resources</h2>
-                <img class="photoTopResources" src="./img/resources2.jpg" alt="">
+                <img class="photoTopResources" src="./img/resources2.jpg" alt="Resources">
               <div class="resourcesLinks">
                 
                 <h3><a class="resourcesLink" href="http://nebula.wsimg.com/6386972fa5bcae57f582f38199cf0814?AccessKeyId=01AAB2E2B483BD965595&disposition=0&alloworigin=1">> SPDAP Application</a></h3>
