added alt value to photos on the index.html page.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
               <div class="col-30 upper" >
                 <div class="showcase-right imgContainer" >
-                  <a href="medicareAdvantagePartC.html"><img class="imgMDPlans2" src="./img/happySeniors.jpg"></a>
+                  <a href="medicareAdvantagePartC.html"><img class="imgMDPlans2" src="./img/happySeniors.jpg" alt="Happy Seniors"></a>
                 </div>
               </div>
             </div>
@@ -120,7 +120,7 @@
               <div class="row">
                 <div class="col-30 upper" >
                   <div class="showcase-left imgContainer" >
-                    <a href="lifeInsurance.html"><img class="imgMDPlans2" src="./img/happyFamily.jpg"></a>
+                    <a href="lifeInsurance.html"><img class="imgMDPlans2" src="./img/happyFamily.jpg" alt="Happy Family"></a>
                   </div>
                 </div>
                 <div class="col-70 lower">
